<resources>
    <string name="app_name">Luigi</string>
    <string name="GeneralPlaceHolder"> Empty </string>

    <!-- Authentication -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="passwordAgain_hint">Password Again</string>
    <string name="button_register">Next</string>
    <string name="button_login">Login</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone number</string>
    <string name="IAlreadyHaveAnAccount">I already have an account</string>

    <!-- Profile fragment -->
    <string name="placeholder_name"> Your name </string>
    <string name="placeholder_email"> youremail@youremail.com</string>
    <string name="placeholder_address">Your Address</string>
    <string name="placeholder_phone">0740234123</string>
    <string name="logout_button">Logout</string>
    <string name="content_description"> Profile picture </string>
    <string name="icon_contentDescription">Icon</string>
    <string name="open_map"> Show on map </string>


    <!--Bottom navigation -->
    <string name="bottom_profile"> Profile </string>
    <string name="bottom_settings"> Settings </string>
    <string name="bottom_home"> Home </string>

    <!--Settings fragment -->
    <string name="settings"> Settings </string>
    <string name="DeleteCache"> Delete cache </string>

    <!-- Toolbar -->
    <string name="search"> Search </string>

    <!-- Dialog -->
    <string name="select_a_city"> Select a city </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>